Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29268

QmlDesigner disables Debugger's Views menu

XMLWordPrintable

    • All
    • 3befa6097 (11.0)

      Steps to reproduce:

      • start QC with QmlDesigner plugin enabled
      • create a Qt Quick Application from template
      • open the qml file, switch to QmlDesigner view
      • switch back Debug

      Current result:

      • the menu entries inside View > Views aren't enabled anymore
      • while debugging there's no way to enable / disable views

       

      Note: This works fine before switching to QmlDesigner view.

        For Gerrit Dashboard: QTCREATORBUG-29268
        # Subject Branch Project Status CR V

            con Eike Ziller
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes