Fix permanently disabled menus

after switching to QmlDesigner and back.

Do not fiddle with the enabled state of the menus, they are managed
automatically by ActionContainer, depending on enabled state of the
actions they contain. Only enabling them in Design mode is the wrong
thing to do.

Amends 4642c5fd7ddf73b4753037c3616c2d60d5899b6e

Fixes: QTCREATORBUG-29268
Change-Id: I3c5704edf787f424f9a9e5e9cb363bbd410db3f2
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>